--- a/app/src/main/res/layout/fragment_item_upload.xml
+++ b/app/src/main/res/layout/fragment_item_upload.xml
@@ -318,7 +318,7 @@
                             android:layout_marginEnd="8dp"
                             android:background="@drawable/rounded_corner_shape_for_item_upload"
                             android:ems="10"
-                            android:hint="@string/item_upload__search_name"
+                            android:hint="Comma Seperated Keywords"
                             android:inputType="textPersonName"
                             android:paddingStart="@dimen/space_8"
                             android:paddingTop="@dimen/space_8"
@@ -462,7 +462,7 @@
                             android:layout_marginTop="8dp"
                             android:layout_marginEnd="8dp"
                             android:background="@drawable/rounded_corner_shape_for_item_upload"
-                            android:hint="City Name"
+                            android:hint="@string/select_city_name"
                             android:paddingStart="@dimen/space_8"
                             android:paddingTop="@dimen/space_8"
                             android:paddingBottom="@dimen/space_8"
@@ -902,7 +902,7 @@
                         <AutoCompleteTextView
                             android:id="@+id/txt_autocomplete"
                             android:layout_width="0dp"
-                            android:layout_height="70dp"
+                            android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
                             android:layout_marginTop="8dp"
                             android:layout_marginEnd="8dp"
@@ -916,10 +916,10 @@
                             android:paddingTop="@dimen/space_8"
                             android:paddingBottom="@dimen/space_8"
                             android:scrollbars="vertical"
+                            android:textAlignment="viewStart"
                             android:textColor="@color/text__primary"
                             android:textSize="@dimen/font_body_size"
                             app:font='@{"normal"}'
-                            android:textAlignment="viewStart"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
