--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -7,7 +7,7 @@
     <!--<data>-->
         <!--<variable-->
             <!--name="aboutUs"-->
-            <!--type="com.panaceasoft.mokets.viewobject.AboutUs" />-->
+            <!--type="com.macinternetservices.sablebusinessdirectory.viewobject.AboutUs" />-->
     <!--</data>-->
 
     <androidx.constraintlayout.widget.ConstraintLayout
