--- a/app/src/main/res/layout/fragment_app_info.xml
+++ b/app/src/main/res/layout/fragment_app_info.xml
@@ -112,7 +112,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/websiteTitleTextView"
                 app:textSize='@{"font_body_size"}'
-                tools:text="https://www.sablebusinessdirectory.com" />
+                tools:text="http://www.panacea-soft.com" />
 
 
             <ImageView
