--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -1592,7 +1592,7 @@
                                                 app:layout_constraintEnd_toEndOf="parent"
                                                 app:layout_constraintStart_toStartOf="parent"
                                                 app:layout_constraintTop_toBottomOf="@+id/websiteTitleTextView"
-                                                tools:text="https://www.sablebusinessdirectory.com" />
+                                                tools:text="http://www.panacea-soft.com" />
                                         </androidx.constraintlayout.widget.ConstraintLayout>
 
                                         <androidx.constraintlayout.widget.ConstraintLayout
